# custom-dns-server

./: Cargo.toml  README.md  config.json
.github/workflows/: rust.yml
src/: arg.rs  main.rs
src/client/: forward.rs  mod.rs
src/server/: conf.rs  mod.rs
