[package]
name = "custom-dns-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.65"
lazy_static = "1.4.0"
thiserror = "1.0.38"
tokio =  { version = "1.25.0", features = ["full"] }
trust-dns-client = "0.22.0"
trust-dns-proto = "0.22.0"
trust-dns-resolver = { version = "0.22.0" }
trust-dns-server = { version = "0.22.0", features = ["resolver"] }
